Tue May 08 01:20:43 BST 2007  Olly Betts <olly@survex.com>

	* backends/flint/flint_database.cc,backends/flint/flint_lock.h: Make
	  FlintLock's dtor release the lock (if held) which avoids the need
	  for any special handling in FlintDatabase.

Mon May 07 21:15:33 BST 2007  Olly Betts <olly@survex.com>

	* tests/harness/unixcmds.cc: Use O_BINARY when opening a file to
	  "touch" it.

Mon May 07 17:28:43 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* backends/flint/flint_database.cc: Add try{}catch(...){} block to
	  ensure that lock is released if an exception occurs in the
	  FlintDatabase() constructor.
	* tests/api_db.cc: Add regression test for releasing lock on error
	  in constructor.

Mon May 07 11:10:33 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* HACKING: Update section on multiple output rules to detail the
	  workaround described in the automake manual.

Mon May 07 10:03:50 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* backends/flint/flint_database.cc,backends/flint/flint_database.h,
	  backends/flint/flint_version.cc,backends/quartz/,exception_data.pm,
	  include/xapian/database.h,tests/api_db.cc: Throw
	  DatabaseVersionError instead of DatabaseOpeningError when database
	  version is unsupported.  This is a new error class, which is a
	  subclass of DatabaseOpeningError, so most existing scripts
	  shouldn't need changing, but makes it easy for application
	  writers to determine whether a database needs upgrading or
	  whether the problem is something else.  Should fix #144.

Mon May 07 09:22:01 BST 2007  Olly Betts <olly@survex.com>

	* net/progclient.cc: Under __WIN32__, use byte mode on pipes because
	  message mode fails for message > 256 bytes, and use "overlapped"
	  mode so we don't block waiting for a reply so that timeouts work.
	  (Patch from Mark Hammond).

Mon May 07 03:03:10 BST 2007  Olly Betts <olly@survex.com>

	* tests/api_anydb.cc,tests/apitest.cc,tests/harness/: Now