@@ -141,6 +141,8 @@ Native C++ API
 +-----------------+----------------+-------------------------------+-------------------------------------------------------------------------------+
 | 1.0.0           | 1.1.0          | Enquire::use_exact_termfreq   | Use Enquire::USE_EXACT_TERMFREQ instead.                                      |
 +-----------------+----------------+-------------------------------+-------------------------------------------------------------------------------+
+| 1.0.0           | 1.1.0          | Error::get_errno()            | Use Error::get_error_string() instead.                                        |
++-----------------+----------------+-------------------------------+-------------------------------------------------------------------------------+
 | 1.0.0           | 1.1.0          | The Quartz backend            | Use the Flint backend instead.                                                |
 +-----------------+----------------+-------------------------------+-------------------------------------------------------------------------------+
 | 1.0.0           | 1.1.0          | Quartz::open()                | Use Flint::open() instead.                                                    |
